Minor bugfixes (expand for changelog)
Release 0.1a
- First public version.
- Changed a few default colours and the font (to Open Sans). 
- Table elements are now centered and expanded (though compatibility issues might happen)

Release 0.1.1a
- Fixed minor bugs
- Fixed horizontal scrollbar in some cases temporarily; might break some stuff, remove the *overflow-x: hidden* value from the table part at the bottom

--- a/modernizer.css
+++ b/modernizer.css
@@ -2,7 +2,6 @@
 /* 2018 (c) knuxfanwin8*/   /* https://github.com/knuxfanwin8/modernizer */
 /*====================*/   /*===========================================*/
 
-/* basic fixes */
 @font-face {
     font-family: 'Open Sans';
     src: url('https://fonts.googleapis.com/css?family=Open+Sans');
@@ -14,6 +13,11 @@ html {
 body {
     background-color: #f5f5f5;
     color: #282828;
+    /* dark mode (just remove the next comment and the background-color and color values above!)*/
+    /*
+    background-color: #282828;
+    color: #e8e8e8;
+    */
     font-family: 'Open Sans', sans-serif !important;
     font-size: 16px;
     width: 100%;
@@ -44,4 +48,5 @@ table {
     margin: 0 auto; 
     width: 95%;
     margin-left:5px;
+    overflow-x: hidden;
 }
